# trimlight

./: .env.example  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: api-client.md  effects.md  trimlight-api.md
src/: client.rs  error.rs  lib.rs  models.rs  utils.rs
src/models/: device.rs  effect.rs  response.rs  schedule.rs
