[package]
name = "trimlight"
version = "0.1.0"
edition = "2021"
description = "A Rust client for the Trimlight API"
license = "MIT"

[[bin]]
name = "trimlight-cli"
path = "src/bin/cli.rs"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
hmac = "0.12"
sha2 = "0.10"
thiserror = "1.0"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
dotenv = "0.15"
dirs = "5.0"

[lib]
name = "trimlight"
path = "src/lib.rs"

[dev-dependencies]
mockito = "1.2.0"
tokio = { version = "1.36", features = ["full"] }
serde_json = "1.0"
